@@ -146,7 +146,7 @@ var preChan = 0;
 var timerChan = 10;
 var TimerActions = "";
 var switchtimerID = 0;
-var SwitchTimer = 1; // No other options yet
+var SwitchTimer = 1; // 1 - switchonly, 2 - record local, 3 - record on server (only 1 & 2 are working)
 var initialDelayID = 0;
 
 var switchicon = "\uE003";
